--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
      <div class="fade-in space-y-6">
       <p class="text-gray-700 leading-relaxed">Sou Psicóloga Clínica, com ênfase em Terapia Cognitivo-Comportamental (TCC) e pós-graduanda na área, guiada pelo compromisso de unir ciência e sensibilidade no cuidado com a saúde mental.</p>
       <p class="text-gray-700 leading-relaxed">Minha atuação se baseia em evidências científicas, na escuta qualificada e no olhar atento às singularidades de cada pessoa, acolhendo cada história com respeito e empatia.</p>
-      <p class="text-gray-700 leading-relaxed">Durante minha formação, tive ênfase na área clínica e experiência como monitora em Terapia Cognitivo-Comportamental, o que fortaleceu minha prática na condução de processos terapêuticos e na compreensão dos padrões de pensamento, emoção e comportamento que sustentam o sofrimento humano.</p>
+      <p class="text-gray-700 leading-relaxed">Durante minha formação, desenvolvi experiência sólida na área clínica, especialmente em Terapia Cognitivo-Comportamental e Avaliação Psicológica, aprimorando minha prática na compreensão dos padrões que estruturam pensamentos, emoções e comportamentos.</p>
       <p class="text-gray-700 leading-relaxed">Atuo com Psicoterapia individual (presencial e online) e Avaliação Psicológica, atendendo jovens, adultos e idosos. Minha prática integra conhecimentos da Neurociência e da Avaliação Psicológica, promovendo um olhar técnico e humano sobre o funcionamento da mente e o desenvolvimento emocional.</p>
       <div class="bg-beige p-6 rounded-lg">
-       <p class="text-olive font-medium italic text-center">"Acredito que compreender a mente é compreender a vida, e que o autoconhecimento é um caminho possível para o equilíbrio e a transformação."</p>
+       <p class="text-olive font-medium italic text-center">"Acredito que compreender a mente é compreender a vida, e que o equilíbrio cognitivo é um caminho possível para a transformação."</p>
       </div>
      </div>
     </div>
@@ -158,11 +158,10 @@
     <div class="grid md:grid-cols-3 gap-8">
      <div class="bg-white rounded-2xl p-8 shadow-lg hover-lift fade-in">
       <div class="text-center mb-6">
-       <div class="w-16 h-16 bg-olive rounded-full flex items-center justify-center mx-auto mb-4">
-        <svg class="w-8 h-8 text-white" fill="currentColor" viewbox="0 0 24 24"><path d="M12,2A3,3 0 0,1 15,5V11A3,3 0 0,1 12,14A3,3 0 0,1 9,11V5A3,3 0 0,1 12,2M19,11C19,14.53 16.39,17.44 13,17.93V21H11V17.93C7.61,17.44 5,14.53 5,11H7A5,5 0 0,0 12,16A5,5 0 0,0 17,11H19Z" />
-        </svg>
+       <div class="w-16 h-16 bg-olive rounded-full flex items-center justify-center mx-auto mb-4 text-3xl">
+        🧠
        </div>
-       <h3 class="text-xl font-semibold text-olive mb-2">🧠 Psicoterapia em TCC</h3>
+       <h3 class="text-xl font-semibold text-olive mb-2">Psicoterapia em TCC</h3>
       </div>
       <p class="text-gray-700 mb-6 leading-relaxed">A Terapia Cognitivo-Comportamental é uma abordagem que ajuda a compreender a relação entre pensamentos, emoções e comportamentos, promovendo mudanças saudáveis e maior qualidade de vida.</p>
       <p class="text-sm text-olive font-medium mb-6">Sessões online e presenciais.</p>
@@ -171,11 +170,10 @@
      </div>
      <div class="bg-white rounded-2xl p-8 shadow-lg hover-lift fade-in">
       <div class="text-center mb-6">
-       <div class="w-16 h-16 bg-gold rounded-full flex items-center justify-center mx-auto mb-4">
-        <svg class="w-8 h-8 text-white" fill="currentColor" viewbox="0 0 24 24"><path d="M14,2H6A2,2 0 0,0 4,4V20A2,2 0 0,0 6,22H18A2,2 0 0,0 20,20V8L14,2M18,20H6V4H13V9H18V20Z" />
-        </svg>
+       <div class="w-16 h-16 bg-gold rounded-full flex items-center justify-center mx-auto mb-4 text-3xl">
+        🔍
        </div>
-       <h3 class="text-xl font-semibold text-olive mb-2">📋 Avaliação Psicológica</h3>
+       <h3 class="text-xl font-semibold text-olive mb-2">Avaliação Psicológica</h3>
       </div>
       <p class="text-gray-700 mb-6 leading-relaxed">Processo técnico e ético que permite compreender aspectos emocionais e cognitivos, subsidiando decisões e planejando intervenções personalizadas.</p>
       <p class="text-sm text-olive font-medium mb-6">Atendimento humanizado e baseado em evidências.</p>
@@ -184,11 +182,10 @@
      </div>
      <div class="bg-white rounded-2xl p-8 shadow-lg hover-lift fade-in">
       <div class="text-center mb-6">
-       <div class="w-16 h-16 bg-olive rounded-full flex items-center justify-center mx-auto mb-4">
-        <svg class="w-8 h-8 text-white" fill="currentColor" viewbox="0 0 24 24"><path d="M12,2A3,3 0 0,1 15,5V11A3,3 0 0,1 12,14A3,3 0 0,1 9,11V5A3,3 0 0,1 12,2M19,11C19,14.53 16.39,17.44 13,17.93V21H11V17.93C7.61,17.44 5,14.53 5,11H7A5,5 0 0,0 12,16A5,5 0 0,0 17,11H19Z" />
-        </svg>
+       <div class="w-16 h-16 bg-olive rounded-full flex items-center justify-center mx-auto mb-4 text-3xl">
+        📍
        </div>
-       <h3 class="text-xl font-semibold text-olive mb-2">🌿 Atendimento Online e Presencial</h3>
+       <h3 class="text-xl font-semibold text-olive mb-2">Atendimento Online e Presencial</h3>
       </div>
       <p class="text-gray-700 mb-6 leading-relaxed">Espaços seguros, éticos e acolhedores, respeitando as singularidades de cada pessoa.</p>
       <p class="text-sm text-olive font-medium mb-6">Flexibilidade para atender suas necessidades.</p>
@@ -206,9 +203,8 @@
     </div>
     <div class="space-y-8">
      <div class="flex items-start space-x-6 fade-in">
-      <div class="flex-shrink-0 w-12 h-12 bg-gold rounded-full flex items-center justify-center">
-       <svg class="w-6 h-6 text-white" fill="currentColor" viewbox="0 0 24 24"><path d="M12,3L1,9L12,15L21,10.09V17H23V9M5,13.18V17.18L12,21L19,17.18V13.18L12,17L5,13.18Z" />
-       </svg>
+      <div class="flex-shrink-0 w-12 h-12 bg-gold rounded-full flex items-center justify-center text-xl">
+       🎓
       </div>
       <div class="flex-1">
        <h3 class="text-xl font-semibold text-olive mb-2">Pós-graduanda em Terapia Cognitivo-Comportamental</h3>
@@ -216,9 +212,8 @@
       </div>
      </div>
      <div class="flex items-start space-x-6 fade-in">
-      <div class="flex-shrink-0 w-12 h-12 bg-olive rounded-full flex items-center justify-center">
-       <svg class="w-6 h-6 text-white" fill="currentColor" viewbox="0 0 24 24"><path d="M12,2A3,3 0 0,1 15,5V11A3,3 0 0,1 12,14A3,3 0 0,1 9,11V5A3,3 0 0,1 12,2M19,11C19,14.53 16.39,17.44 13,17.93V21H11V17.93C7.61,17.44 5,14.53 5,11H7A5,5 0 0,0 12,16A5,5 0 0,0 17,11H19Z" />
-       </svg>
+      <div class="flex-shrink-0 w-12 h-12 bg-olive rounded-full flex items-center justify-center text-xl">
+       💼
       </div>
       <div class="flex-1">
        <h3 class="text-xl font-semibold text-olive mb-2">Ênfase em Psicologia Clínica durante a formação</h3>
@@ -226,19 +221,17 @@
       </div>
      </div>
      <div class="flex items-start space-x-6 fade-in">
-      <div class="flex-shrink-0 w-12 h-12 bg-gold rounded-full flex items-center justify-center">
-       <svg class="w-6 h-6 text-white" fill="currentColor" viewbox="0 0 24 24"><path d="M16,4H18V16H16V4M6,4H8V16H6V4M9,14H15V16H9V14M9,10H15V12H9V10M9,6H15V8H9V6M4,2H20A2,2 0 0,1 22,4V16A2,2 0 0,1 20,18H13L11,20L9,18H4A2,2 0 0,1 2,16V4A2,2 0 0,1 4,2Z" />
-       </svg>
+      <div class="flex-shrink-0 w-12 h-12 bg-gold rounded-full flex items-center justify-center text-xl">
+       📋
       </div>
       <div class="flex-1">
-       <h3 class="text-xl font-semibold text-olive mb-2">Experiência em monitoria em TCC</h3>
-       <p class="text-gray-700">Atuação como monitora fortaleceu minha compreensão dos fundamentos teóricos e práticos da Terapia Cognitivo-Comportamental.</p>
+       <h3 class="text-xl font-semibold text-olive mb-2">Experiência em Avaliação Psicológica</h3>
+       <p class="text-gray-700">Atuação sólida em Avaliação Psicológica, com vasta participação em projetos práticos e teóricos que reforçaram minha compreensão técnica, ética e científica desse processo.</p>
       </div>
      </div>
      <div class="flex items-start space-x-6 fade-in">
-      <div class="flex-shrink-0 w-12 h-12 bg-olive rounded-full flex items-center justify-center">
-       <svg class="w-6 h-6 text-white" fill="currentColor" viewbox="0 0 24 24"><path d="M9,5V9H21V5M9,19H21V15H9M9,14H21V10H9M4,9H8L6,7M4,19H8L6,17M4,14H8L6,12" />
-       </svg>
+      <div class="flex-shrink-0 w-12 h-12 bg-olive rounded-full flex items-center justify-center text-xl">
+       📚
       </div>
       <div class="flex-1">
        <h3 class="text-xl font-semibold text-olive mb-2">Pesquisas e publicações nas áreas de Neurociência e Avaliação Psicológica</h3>
@@ -246,9 +239,8 @@
       </div>
      </div>
      <div class="flex items-start space-x-6 fade-in">
-      <div class="flex-shrink-0 w-12 h-12 bg-gold rounded-full flex items-center justify-center">
-       <svg class="w-6 h-6 text-white" fill="currentColor" viewbox="0 0 24 24"><path d="M5,16L3,14L5,12L6.4,13.4L4.8,15L6.4,16.6L5,18M19,8L21,10L19,12L17.6,10.6L19.2,9L17.6,7.4L19,6M12,15A3,3 0 0,1 9,12A3,3 0 0,1 12,9A3,3 0 0,1 15,12A3,3 0 0,1 12,15M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z" />
-       </svg>
+      <div class="flex-shrink-0 w-12 h-12 bg-gold rounded-full flex items-center justify-center text-xl">
+       🏆
       </div>
       <div class="flex-1">
        <h3 class="text-xl font-semibold text-olive mb-2">Premiações em simpósios científicos e atuação em projetos de extensão</h3>
@@ -258,7 +250,7 @@
     </div>
     <div class="text-center mt-12 fade-in">
      <div class="bg-beige p-8 rounded-2xl">
-      <p class="text-xl text-olive font-medium italic">"Cuidar da mente é um ato de coragem e amor. Cada passo no autoconhecimento é uma transformação em direção a si mesmo." 💛</p>
+      <p class="text-xl text-olive font-medium italic">"A grande mudança começa não no externo, mas na forma como percebemos e nos conectamos a ele." 💛</p>
      </div>
     </div>
    </div>
@@ -268,7 +260,7 @@
     <div class="text-center mb-12 fade-in">
      <h2 class="text-3xl md:text-4xl font-bold mb-4">Agendamento</h2>
      <div class="w-24 h-1 bg-gold mx-auto mb-6"></div>
-     <p class="text-xl mb-8">Agende sua sessão de Psicoterapia ou Avaliação Psicológica.</p>
+     <p class="text-xl mb-8">Agende sua consulta e vamos comigo conhecer um pouco mais sobre VOCÊ. ✨</p>
      <p class="text-lg mb-8">Clique no botão abaixo para falar comigo:</p>
     </div>
     <div class="text-center mb-12 fade-in"><a id="main-whatsapp-btn" href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="inline-flex items-center space-x-3 bg-white text-olive px-8 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition-all hover-lift">
@@ -442,5 +434,5 @@
         // Initialize WhatsApp links on page load
         updateWhatsAppLinks();
     </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a13ae7656abdc15',t:'MTc2MzU5Njk3Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a1bd559c0e327f5',t:'MTc2MzY4MjQ1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
