--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
    </div>
   </nav><!-- Hero Section -->
-  <section id="inicio" class="min-h-screen flex items-center justify-center relative overflow-hidden">
+  <section id="inicio" class="min-h-screen flex items-center justify-center relative overflow-hidden pt-20">
    <div class="leaf-decoration top-20 left-10">
     <svg width="60" height="60" viewbox="0 0 24 24" fill="currentColor" class="text-olive"><path d="M17,8C8,10 5.9,16.17 3.82,21.34L5.71,22L6.66,19.7C7.14,19.87 7.64,20 8,20C19,20 22,3 22,3C21,5 14,5.25 9,6.25C4,7.25 2,11.5 2,13.5C2,15.5 3.75,17.25 3.75,17.25C7,8 17,8 17,8Z" />
     </svg>
@@ -116,7 +116,7 @@
     <h1 id="hero-title" class="text-4xl md:text-6xl font-bold text-olive mb-4">Gerlane Torres</h1>
     <p class="text-lg text-gray-600 mb-2">Psicóloga Clínica | CRP 13/13663</p>
     <div class="my-8">
-     <p id="hero-motto" class="text-2xl md:text-3xl font-light text-gold italic mb-6">"Compreender, acolher e transformar"</p>
+     <p id="hero-motto" class="text-2xl md:text-3xl font-light text-gold italic mb-6">"Compreender, acolher e transformar" 🌻</p>
      <p id="hero-welcome" class="text-lg text-gray-700 max-w-3xl mx-auto leading-relaxed">Psicóloga Clínica com foco em Terapia Cognitivo-Comportamental (TCC), unindo ciência e sensibilidade no cuidado com a mente humana.</p>
     </div>
     <div class="flex flex-col sm:flex-row gap-4 justify-center items-center mt-8"><a id="whatsapp-btn" href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="bg-olive text-white px-8 py-4 rounded-full font-semibold hover:bg-opacity-90 transition-all hover-lift flex items-center space-x-2">
@@ -159,13 +159,13 @@
      <div class="bg-white rounded-2xl p-8 shadow-lg hover-lift fade-in">
       <div class="text-center mb-6">
        <div class="w-16 h-16 bg-olive rounded-full flex items-center justify-center mx-auto mb-4 text-3xl">
-        🧠
+        🌻
        </div>
        <h3 class="text-xl font-semibold text-olive mb-2">Psicoterapia em TCC</h3>
       </div>
       <p class="text-gray-700 mb-6 leading-relaxed">A Terapia Cognitivo-Comportamental é uma abordagem que ajuda a compreender a relação entre pensamentos, emoções e comportamentos, promovendo mudanças saudáveis e maior qualidade de vida.</p>
       <p class="text-sm text-olive font-medium mb-6">Sessões online e presenciais.</p>
-      <div class="space-y-3"><a href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="block w-full bg-olive text-white text-center py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-all"> Agendar Atendimento </a> <button class="w-full border-2 border-olive text-olive py-3 rounded-lg font-semibold hover:bg-olive hover:text-white transition-all"> Saiba mais </button>
+      <div class="space-y-3"><a href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="block w-full bg-olive text-white text-center py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-all"> Agendar Atendimento </a>
       </div>
      </div>
      <div class="bg-white rounded-2xl p-8 shadow-lg hover-lift fade-in">
@@ -177,7 +177,7 @@
       </div>
       <p class="text-gray-700 mb-6 leading-relaxed">Processo técnico e ético que permite compreender aspectos emocionais e cognitivos, subsidiando decisões e planejando intervenções personalizadas.</p>
       <p class="text-sm text-olive font-medium mb-6">Atendimento humanizado e baseado em evidências.</p>
-      <div class="space-y-3"><a href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="block w-full bg-olive text-white text-center py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-all"> Agendar Atendimento </a> <button class="w-full border-2 border-olive text-olive py-3 rounded-lg font-semibold hover:bg-olive hover:text-white transition-all"> Saiba mais </button>
+      <div class="space-y-3"><a href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="block w-full bg-olive text-white text-center py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-all"> Agendar Atendimento </a>
       </div>
      </div>
      <div class="bg-white rounded-2xl p-8 shadow-lg hover-lift fade-in">
@@ -189,7 +189,7 @@
       </div>
       <p class="text-gray-700 mb-6 leading-relaxed">Espaços seguros, éticos e acolhedores, respeitando as singularidades de cada pessoa.</p>
       <p class="text-sm text-olive font-medium mb-6">Flexibilidade para atender suas necessidades.</p>
-      <div class="space-y-3"><a href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="block w-full bg-olive text-white text-center py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-all"> Agendar Atendimento </a> <button class="w-full border-2 border-olive text-olive py-3 rounded-lg font-semibold hover:bg-olive hover:text-white transition-all"> Saiba mais </button>
+      <div class="space-y-3"><a href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="block w-full bg-olive text-white text-center py-3 rounded-lg font-semibold hover:bg-opacity-90 transition-all"> Agendar Atendimento </a>
       </div>
      </div>
     </div>
@@ -260,7 +260,7 @@
     <div class="text-center mb-12 fade-in">
      <h2 class="text-3xl md:text-4xl font-bold mb-4">Agendamento</h2>
      <div class="w-24 h-1 bg-gold mx-auto mb-6"></div>
-     <p class="text-xl mb-8">Agende sua consulta e vamos comigo conhecer um pouco mais sobre VOCÊ. ✨</p>
+     <p class="text-xl mb-8">Agende sua consulta e vamos comigo conhecer um pouco mais sobre VOCÊ! ✨</p>
      <p class="text-lg mb-8">Clique no botão abaixo para falar comigo:</p>
     </div>
     <div class="text-center mb-12 fade-in"><a id="main-whatsapp-btn" href="https://wa.me/5583993700983" target="_blank" rel="noopener noreferrer" class="inline-flex items-center space-x-3 bg-white text-olive px-8 py-4 rounded-full font-bold text-lg hover:bg-gray-100 transition-all hover-lift">
@@ -284,13 +284,11 @@
       <h3 class="font-semibold">E-mail</h3>
       <p id="footer-email">gerlanetorressv@gmail.com</p>
      </div>
-     <div class="space-y-4">
-      <div class="w-16 h-16 bg-white rounded-full flex items-center justify-center mx-auto">
-       <svg class="w-8 h-8 text-olive" fill="currentColor" viewbox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" />
-       </svg>
-      </div>
-      <h3 class="font-semibold">Instagram</h3>
-      <p id="footer-instagram">@psigerlanetorres</p>
+     <div class="space-y-4"><a href="https://www.instagram.com/psigerlanetorres/" target="_blank" rel="noopener noreferrer" class="block">
+       <div class="w-16 h-16 bg-white rounded-full flex items-center justify-center mx-auto hover:bg-gray-100 transition-all">
+        <svg class="w-8 h-8 text-olive" fill="currentColor" viewbox="0 0 24 24"><path d="M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z" />
+        </svg>
+       </div><h3 class="font-semibold">Instagram</h3><p id="footer-instagram" class="hover:text-gold transition-colors">@psigerlanetorres</p></a>
      </div>
     </div>
     <div class="text-center mt-8 fade-in">
@@ -434,5 +432,5 @@
         // Initialize WhatsApp links on page load
         updateWhatsAppLinks();
     </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a1bd559c0e327f5',t:'MTc2MzY4MjQ1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a1bf9f6222c27f5',t:'MTc2MzY4Mzk1Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
